--- a/crx/css/content.less
+++ b/crx/css/content.less
@@ -2,8 +2,7 @@
 .reaPosi {
     position: relative;
 }
-
-@imgUrl: "https://dev-browser-plugin.qiang100.com/";
+@imgUrl: "https://browser-plugin.qiang100.com/";
 @contentWidth: 500px;
 @contentHeight: 280px;
 @liHeight: 48px;
@@ -14,7 +13,6 @@
     background: pink;
     margin-top: 30px;
     margin-bottom:30px;
-
     position: relative;
     left: 8px;
     .content-logo{position: absolute;width: 50px;height: 50px;background: #fff ;top:0;left:0;
@@ -27,7 +25,6 @@ ul.content-list {
     height: @liHeight;
     float: left;
     background: #fff ;
-
     line-height: @liHeight;
     border: 1px solid #e5e5e5;
     li.content-li{
@@ -49,15 +46,14 @@ ul.content-list {
             top:48px;
             left: 0;
             z-index: 999;
-            height: calc(@contentHeight - @liHeight);
-            background: #fff url( "@{imgUrl}/v2/assets/img/content-bg.png") center no-repeat;
-
+            min-height: @contentHeight - @liHeight;
+            background: #fff url("@{imgUrl}v2/assets/img/content-bg.png") no-repeat center !important;
         }
         
         //价格走势
         .price-line {
             width: @contentWidth;
-            height: calc(@contentHeight - @liHeight);
+            height: @contentHeight - @liHeight;
             display: none;
             color: #666;
             float: left;
@@ -67,7 +63,7 @@ ul.content-list {
                 background: #fff;
             }
             h3 {
-                width: calc(@contentWidth - 40px);
+                width: @contentWidth - 40px;
                 height: 20px;
                 background: #fff;
                 font-size: 15px;
@@ -106,7 +102,7 @@ ul.content-list {
         //全网比价
         .price-all {
             width:@contentWidth;
-            height: calc(@contentHeight - @liHeight);
+            height: @contentHeight - @liHeight;
             background: #fff;
             overflow-y: hidden;
             float: left;
@@ -116,7 +112,7 @@ ul.content-list {
                 background: #fff;
             }
             ul li {
-                width: calc(@contentWidth - 96px);
+                width: @contentWidth - 96px;
                 height: 46px;
                 background: #fff;
                 border-bottom: 1px solid #ddd;
@@ -170,11 +166,12 @@ ul.content-list {
         //好评率
         .evaluate-wrapper {
             width: @contentWidth;
-            height: calc(@contentHeight - @liHeight);
+            min-height: @contentHeight - @liHeight;
             float: left;
             .evaluate-info {
                 width: 100%;
                 height: inherit;
+                float: left;
                 background: #fff;
             }
             .evaluate-percent {
@@ -184,7 +181,7 @@ ul.content-list {
                 border-bottom: 1px solid #ddd;
                 margin: 0 auto;
             }
-            .evaluate-percent-all {
+            .evaluate-percent-all {     //全部评价
                 width: 150px;
                 height: 120px;
                 display: block;
@@ -198,13 +195,18 @@ ul.content-list {
                     width: 150px;
                     height: 80px;
                     background: #fff;
-                    font-size: 60px;
                     color: #FF4443;
                     line-height: 80px;
                     float: left;
-                    b{background: #fff;float: left;}
+                    position: relative;
+                    left: -20px;
+                    b{background: #fff;float: left;text-align: left;}
                     em {
-                        font-size: 24px;
+                        font-size: 40px;
+                        color:#FF4443;
+                        text-align: left;
+                        float: left;
+                        i{font-size: 20px;}
                         
                     }
                 }
@@ -224,7 +226,7 @@ ul.content-list {
                     }
                 }
             }
-            .evaluate-percent-kind {
+            .evaluate-percent-kind {   //百分比
                 width: 250px;
                 height: inherit;
                 background: #fff; 
@@ -242,12 +244,12 @@ ul.content-list {
                 }
                 p span {
                     display: inline-block;
-                    width: 120px;
+                    width: 100px;
                     height: 10px;
                     background: #E5E5E5;
                     margin: 0 20px;
                     position: relative;
-                    border-radius: 10px;
+                    border-radius: 2px;
                     b {
                         width: 0%;
                         height: 10px;
@@ -257,7 +259,7 @@ ul.content-list {
                         background: #60B12A;
                         transition: width 2s;
                         -webkit-transition: width 2s;
-                        border-radius: 10px;
+                        border-radius: 2px;
                         /* Safari */
                     }
                 }
@@ -273,33 +275,52 @@ ul.content-list {
                 }
             }
             .evaluate-tag {
-                width: 404px;
-                height: 50px;
+                width: 420px;
+                max-height: 76px;
                 background: #fff; 
-                margin: 0 auto;
+                overflow: hidden;
                 line-height: 50px;
-                margin-top: 10px;
                 text-align: left;
+                float: left;
+                margin-left:40px;
+                margin-top:20px;
+                margin-bottom:20px;
                 span {
-                    padding: 5px 10px;
+                    width: 88px;
+                    height: 26px;
+                    line-height: 26px;
                     border: 1px solid #999;
-                    position: relative;
                     font-size:12px;
-                    margin-right: 10px;
-                    left: -7px;
-                    em {
-                        margin-left: 3px;
+                    margin-bottom: 10px;
+                    margin-right: 15px;
+                    display: block;
+                    float: left;
+                    background: #fff;
+                    position: relative;
+                    left: 8px;
+
+                    em{background: transparent;width: 92px;display: block;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;text-align: center !important;position: relative;left: -11px;
                     }
                 }
+
+                span:hover {
+                    border-color: #FF4443;
+                    color: #FF4443
+                }
+
+                
             }
         }
 
         //品牌信息
         .brand-wrapper {
             width: 100%;
-            height: calc(@contentHeight - @liHeight);
+            height: @contentHeight - @liHeight;
             float: left;
-            background-position-x: 260px;
+            background-position-x: 260px !important;
             .barnd-info {
                 width: 100%;
                 height: inherit;
@@ -334,7 +355,7 @@ ul.content-list {
         }
 
         .brand-detail {
-            width: calc(@contentWidth - 180px);
+            width:@contentWidth - 180px;
             height: inherit;
             background: #fff;
             float: left;
