--- a/popup/src/assets/less/reset.less
+++ b/popup/src/assets/less/reset.less
@@ -37,7 +37,7 @@ li {
 }
 
 body {
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-family: "SF Pro Text", "Microsoft YaHei","Arial", Microsoft YaHei, "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     font-size: 14px;
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: transparent;
